--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
     <color name="gray1">#969696</color>
     <color name="gray2">#DFDADA</color>
     <color name="gray3">#4E4E4E</color>
+    <color name="gray4">#C4C4C4</color>
+    <color name="gray5">#808080</color>
 </resources>
