--- a/app/src/main/res/drawable/background_rounding.xml
+++ b/app/src/main/res/drawable/background_rounding.xml
@@ -2,10 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="10dp"
     android:shape="rectangle" >
-    <solid android:color="#FFF" />
-    <corners
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp" />
+    <solid android:color="#FFFFFF" />
+    <stroke android:width="4dp" android:color="#000000" />
+    <corners android:radius="10dp" />
 </shape>
