--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,214 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".MainActivity"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
-
     <FrameLayout
+        android:id="@+id/main_layout"
         android:layout_width="match_parent"
-        android:layout_height="273dp">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="?attr/actionBarSize"/>
 
-        <ImageView
-            android:id="@+id/rectangle_9"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:layout_marginTop="-30dp"
-            android:background="@drawable/background_rounding"
-            android:backgroundTint="@color/mint1"/>
-
-        <TextView
-            android:id="@+id/user_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="80dp"
-            android:text="김민영님의 통장"
-            android:textColor="@color/white"
-            android:textSize="30dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/pay1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_marginLeft="320dp"
-            android:layout_marginTop="92dp"
-            android:text="결제"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-    </FrameLayout>
-
-    <FrameLayout
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_gravity="bottom"
+        app:menu="@menu/bottom_nav"
+        app:labelVisibilityMode="labeled"
+        app:itemIconTint="@color/gray4"
+        app:itemTextColor="@color/gray3"
         android:layout_width="match_parent"
-        android:layout_height="450dp"
-        android:padding="10dp"
-        android:layout_marginTop="-150dp">
-    <ImageView
-        android:id="@+id/Rectangle_10"
-        android:layout_width="330dp"
-        android:layout_height="240dp"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/background_rounding"
-        android:backgroundTint="@color/white"/>
+        android:layout_height="wrap_content"/>
 
-        <Button
-            android:id="@+id/button_pay"
-            android:layout_width="70dp"
-            android:layout_height="35dp"
-            android:layout_marginLeft="265dp"
-            android:layout_marginTop="90dp"
-            android:background="@drawable/background_rounding"
-            android:backgroundTint="@color/mint2"
-            android:text="송금"
-            android:textSize="20dp"
-            android:textColor="@color/white"
-            android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/account_name1"
-        android:layout_width="140dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="20dp"
-        android:text="농협체크카드"
-        android:textColor="@color/black"
-        android:textSize="20dp"/>
-
-        <TextView
-            android:id="@+id/account_number1"
-            android:layout_width="150dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginTop="50dp"
-            android:text="312-3425-5643-09"
-            android:textColor="@color/gray1"
-            android:textSize="17dp"/>
-
-        <TextView
-            android:id="@+id/account_amount1"
-            android:layout_width="160dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginTop="90dp"
-            android:text="3,425,000원"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="25dp"/>
-
-        <ImageView
-            android:id="@+id/Rectangle_72"
-            android:layout_width="280dp"
-            android:layout_height="0.5dp"
-            android:layout_marginTop="140dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/background_rounding"
-            android:backgroundTint="@color/gray2"/>
-
-        <TextView
-            android:id="@+id/donate_money1"
-            android:layout_width="70dp"
-            android:layout_height="12dp"
-            android:layout_marginLeft="85dp"
-            android:layout_marginTop="148dp"
-            android:text="보유 기부금액"
-            android:textColor="@color/black"
-            android:textSize="10dp"/>
-
-        <ImageView
-            android:id="@+id/Rectangle_73"
-            android:layout_width="280dp"
-            android:layout_height="0.5dp"
-            android:layout_marginTop="170dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/background_rounding"
-            android:backgroundTint="@color/gray2"/>
-
-        <TextView
-            android:id="@+id/my_donate1"
-            android:layout_width="70dp"
-            android:layout_height="12dp"
-            android:layout_marginLeft="85dp"
-            android:layout_marginTop="178dp"
-            android:text="나의 기부 레벨"
-            android:textColor="@color/black"
-            android:textSize="10dp"/>
-
-        <ImageView
-            android:id="@+id/Rectangle_76"
-            android:layout_width="280dp"
-            android:layout_height="0.5dp"
-            android:layout_marginTop="200dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/background_rounding"
-            android:backgroundTint="@color/gray2"/>
-
-        <TextView
-            android:id="@+id/carde_use1"
-            android:layout_width="70dp"
-            android:layout_height="12dp"
-            android:layout_marginLeft="85dp"
-            android:layout_marginTop="208dp"
-            android:text="카드 사용내역"
-            android:textColor="@color/black"
-            android:textSize="10dp"/>
-
-        <ImageView
-            android:id="@+id/Rectangle_11"
-            android:layout_width="330dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="280dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@drawable/background_rounding"
-            android:backgroundTint="@color/white"/>
-
-        <Button
-            android:id="@+id/button_donate1"
-            android:layout_width="75dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="260dp"
-            android:layout_marginTop="300dp"
-            android:background="@drawable/background_rounding"
-            android:backgroundTint="@color/mint2"
-            android:text="참여하기"
-            android:textSize="15dp"
-            android:textColor="@color/white"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/user_name2"
-            android:layout_width="60dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="295dp"
-            android:text="김민영"
-            android:textColor="@color/gray3"
-            android:textStyle="bold"
-            android:textSize="20dp"/>
-        <TextView
-            android:id="@+id/user_question1"
-            android:layout_width="50dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="110dp"
-            android:layout_marginTop="300dp"
-            android:text="님에게"
-            android:textColor="@color/gray3"
-            android:textSize="15dp"/>
-        <TextView
-            android:id="@+id/user_question2"
-            android:layout_width="200dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="330dp"
-            android:text="가장 기억에 남는 기부는 무엇인가요?"
-            android:textColor="@color/gray3"
-            android:textSize="13dp"/>
-    </FrameLayout>
-
-</LinearLayout>
+    z</androidx.coordinatorlayout.widget.CoordinatorLayout>
