--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="gray3">#4E4E4E</color>
     <color name="gray4">#C4C4C4</color>
     <color name="gray5">#808080</color>
+    <color name="gray6">#7C7C7C</color>
 </resources>
