--- a/app/src/main/res/layout/fragment_pay_4.xml
+++ b/app/src/main/res/layout/fragment_pay_4.xml
@@ -3,12 +3,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FragmentPay_4">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="horizontal">
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginTop="-30dp"
+            android:backgroundTint="@color/mint1"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="10dp">
+
+            <TextView
+                android:id="@+id/donate_title"
+                android:layout_width="140dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="45dp"
+                android:text="송금하기"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:textSize="30dp"
+                android:textStyle="bold"/>
+
+        </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="30dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="85dp"
+            android:text="송금/계좌이체"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="25dp"
+            android:gravity="center"/>
+
+        <EditText
+            android:layout_width="160dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="150dp"
+            android:layout_marginLeft="160dp"
+            android:background="@drawable/edit_mint"/>
+        <EditText
+            android:layout_width="220dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="230dp"
+            android:layout_marginLeft="160dp"
+            android:background="@drawable/edit_mint"/>
+        <EditText
+            android:layout_width="180dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="310dp"
+            android:layout_marginLeft="160dp"
+            android:background="@drawable/edit_mint"/>
+
+    </RelativeLayout>
 </FrameLayout>
