--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="red">#FF0000</color>
     <color name="white">#FFFFFF</color>
     <color name="mint1">#8DBBA7</color>
     <color name="mint2">#95C6B1</color>
