--- a/app/src/main/res/layout/fragment_pay_1.xml
+++ b/app/src/main/res/layout/fragment_pay_1.xml
@@ -47,6 +47,13 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="130dp"
                 android:background="@drawable/qr"/>
+            <ImageView
+                android:id="@+id/image_qr_create"
+                android:layout_width="115dp"
+                android:layout_height="115dp"
+                android:layout_marginTop="135dp"
+                android:layout_centerHorizontal="true"
+                android:background="#00ffffff"/>
             <androidx.cardview.widget.CardView
                 android:id="@+id/btn_pay1"
                 android:layout_width="300dp"
@@ -76,6 +83,7 @@
                 android:layout_marginTop="360dp"
                 android:layout_gravity="center_horizontal"
                 android:background="@color/gray2"/>
+
 
             <TextView
                 android:layout_width="100dp"
