--- a/app/src/main/res/layout/fragment_pay_2.xml
+++ b/app/src/main/res/layout/fragment_pay_2.xml
@@ -41,6 +41,14 @@
                 android:layout_marginTop="120dp"
                 android:background="@drawable/qr"/>
 
+            <ImageView
+                android:id="@+id/image_qr_create"
+                android:layout_width="185dp"
+                android:layout_height="185dp"
+                android:layout_marginTop="125dp"
+                android:layout_centerHorizontal="true"
+                android:background="#00ffffff"/>
+
 
             <TextView
                 android:layout_width="270dp"
