--- a/app/src/main/res/layout/fragment_pay_2.xml
+++ b/app/src/main/res/layout/fragment_pay_2.xml
@@ -81,6 +81,7 @@
                 android:textSize="25dp"
                 android:textStyle="bold"/>
             <TextView
+                android:id="@+id/time"
                 android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="110dp"
