--- a/app/src/main/res/layout/fragment_donate_1.xml
+++ b/app/src/main/res/layout/fragment_donate_1.xml
@@ -8,7 +8,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="1000dp"
             android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
@@ -35,7 +35,7 @@
 
 
             <androidx.cardview.widget.CardView
-                android:layout_width="250dp"
+                android:layout_width="220dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="100dp"
                 android:layout_centerHorizontal="true"
@@ -65,59 +65,59 @@
             <TextView
                 android:layout_width="95dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="210dp"
+                android:layout_marginTop="200dp"
                 android:layout_marginLeft="35dp"
                 android:text="카테고리"
-                android:textSize="25dp"
+                android:textSize="20dp"
                 android:textColor="@color/black"
                 android:textStyle="bold"/>
             <ImageButton
                 android:id="@+id/category_child1"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginLeft="40dp"
-                android:layout_marginTop="250dp"
+                android:layout_marginTop="230dp"
                 android:background="@drawable/category_navi"/>
             <TextView
                 android:id="@+id/category_child2"
                 android:layout_width="30dp"
                 android:layout_height="20dp"
-                android:layout_marginLeft="70dp"
-                android:layout_marginTop="325dp"
+                android:layout_marginLeft="65dp"
+                android:layout_marginTop="300dp"
                 android:text="아동"
                 android:textSize="15dp"
                 android:textStyle="bold"
                 android:textColor="@color/gray5"/>
             <ImageButton
                 android:id="@+id/category_parent1"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="250dp"
+                android:layout_marginTop="230dp"
                 android:background="@drawable/category_navi"/>
             <TextView
                 android:id="@+id/category_parent2"
-                android:layout_width="50dp"
+                android:layout_width="45dp"
                 android:layout_height="20dp"
-                android:layout_marginLeft="190dp"
-                android:layout_marginTop="325dp"
+                android:layout_marginLeft="185dp"
+                android:layout_marginTop="300dp"
                 android:text="한부모"
                 android:textSize="15dp"
                 android:textStyle="bold"
                 android:textColor="@color/gray5"/>
             <ImageButton
                 android:id="@+id/category_senior1"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginLeft="285dp"
-                android:layout_marginTop="250dp"
+                android:layout_marginTop="230dp"
                 android:background="@drawable/category_navi"/>
             <TextView
                 android:id="@+id/category_senior2"
-                android:layout_width="50dp"
+                android:layout_width="45dp"
                 android:layout_height="20dp"
-                android:layout_marginLeft="315dp"
-                android:layout_marginTop="325dp"
+                android:layout_marginLeft="305dp"
+                android:layout_marginTop="300dp"
                 android:text="어르신"
                 android:textSize="15dp"
                 android:textStyle="bold"
@@ -125,52 +125,52 @@
 
             <ImageButton
                 android:id="@+id/category_dog1"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginLeft="40dp"
-                android:layout_marginTop="350dp"
+                android:layout_marginTop="330dp"
                 android:background="@drawable/category_navi"/>
             <TextView
                 android:id="@+id/category_dog2"
                 android:layout_width="45dp"
                 android:layout_height="20dp"
-                android:layout_marginLeft="65dp"
-                android:layout_marginTop="425dp"
+                android:layout_marginLeft="63dp"
+                android:layout_marginTop="400dp"
                 android:text="유기견"
                 android:textSize="15dp"
                 android:textStyle="bold"
                 android:textColor="@color/gray5"/>
             <ImageButton
                 android:id="@+id/category_nature1"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="350dp"
+                android:layout_marginTop="330dp"
                 android:background="@drawable/category_navi"/>
             <TextView
                 android:id="@+id/category_nature2"
                 android:layout_width="60dp"
                 android:layout_height="20dp"
                 android:layout_marginLeft="183dp"
-                android:layout_marginTop="425dp"
+                android:layout_marginTop="400dp"
                 android:text="자연재해"
                 android:textSize="15dp"
                 android:textStyle="bold"
                 android:textColor="@color/gray5"/>
             <ImageButton
                 android:id="@+id/category_dis1"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
                 android:layout_marginLeft="285dp"
-                android:layout_marginTop="350dp"
+                android:layout_marginTop="330dp"
                 android:background="@drawable/category_navi"/>
             <TextView
                 android:id="@+id/category_dis2"
-                android:layout_width="50dp"
+                android:layout_width="45dp"
                 android:layout_height="20dp"
-                android:layout_marginLeft="315dp"
-                android:layout_marginTop="425dp"
-                android:text="장애인ㄴ"
+                android:layout_marginLeft="305dp"
+                android:layout_marginTop="400dp"
+                android:text="장애인"
                 android:textSize="15dp"
                 android:textStyle="bold"
                 android:textColor="@color/gray5"/>
@@ -178,24 +178,24 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="480dp"
+                android:layout_marginTop="450dp"
                 android:layout_gravity="center_horizontal"
                 android:background="@color/gray2"/>
 
             <TextView
                 android:layout_width="70dp"
                 android:layout_height="30dp"
-                android:layout_marginTop="500dp"
+                android:layout_marginTop="470dp"
                 android:layout_marginLeft="35dp"
                 android:text="기관 >"
-                android:textSize="25dp"
+                android:textSize="20dp"
                 android:textColor="@color/black"
                 android:textStyle="bold"/>
             <ListView
                 android:id="@+id/listview1"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
-                android:layout_marginTop="550dp"
+                android:layout_marginTop="510dp"
                 android:layout_marginLeft="35dp"/>
     </RelativeLayout>
 </FrameLayout>
