--- a/app/src/main/res/layout/fragment_community_1.xml
+++ b/app/src/main/res/layout/fragment_community_1.xml
@@ -3,12 +3,199 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FragmentCommunity_1">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginTop="-30dp"
+                android:backgroundTint="@color/mint1"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="10dp">
 
+                <TextView
+                    android:id="@+id/donate_title"
+                    android:layout_width="140dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="45dp"
+                    android:text="커뮤니티"
+                    android:textColor="@color/white"
+                    android:textAlignment="center"
+                    android:textSize="30dp"
+                    android:textStyle="bold"/>
+
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:layout_width="130dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="110dp"
+                android:text="최신 기부 소식"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="20dp"/>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/news_form"
+                android:layout_width="370dp"
+                android:layout_height="170dp"
+                android:layout_marginTop="150dp"
+                android:layout_centerHorizontal="true"
+                app:cardCornerRadius="10dp">
+                <TextView
+                    android:id="@+id/news1"
+                    android:layout_width="200dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:text="2020 생명나눔 후원의 밤 개최"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:textSize="15dp"/>
+                <ImageView
+                    android:layout_width="350dp"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@color/gray2"/>
+                <TextView
+                    android:id="@+id/news2"
+                    android:layout_width="310dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="50dp"
+                    android:text="고양 일산동구 '복지나눔 1촌맺기' 진행..후원 밀물"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:textSize="15dp"/>
+                <ImageView
+                    android:layout_width="350dp"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="80dp"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@color/gray2"/>
+                <TextView
+                    android:id="@+id/news3"
+                    android:layout_width="310dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="90dp"
+                    android:text="칠성면 새마을회, '희망2021 나눔캠페인' 성금 후원"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:textSize="15dp"/>
+                <ImageView
+                    android:id="@+id/news4"
+                    android:layout_width="350dp"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="120dp"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@color/gray2"/>
+                <TextView
+                    android:layout_width="220dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="130dp"
+                    android:text="코레일관광개발, '사랑의 연탄' 후원"
+                    android:textAlignment="center"
+                    android:gravity="center"
+                    android:textColor="@color/black"
+                    android:textSize="15dp"/>
+            </androidx.cardview.widget.CardView>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="340dp"
+                android:layout_gravity="center_horizontal"
+                android:background="@color/gray2"/>
+
+            <EditText
+                android:layout_width="380dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="360dp"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/search_donate1"
+                android:hint="       가장 기억에 남는 기부는 무엇인가요?"
+                android:textSize="16dp"
+                android:textAlignment="gravity"
+                android:gravity="fill|left"
+                android:textColorHint="@color/gray3"/>
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="340dp"
+                android:layout_marginTop="375dp"
+                android:background="@drawable/mdi_edit"/>
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="440dp"
+                android:text="기부 이야기"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="20dp"/>
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="220dp"
+                android:layout_marginTop="440dp"
+                android:text="관심순"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="15dp"/>
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="275dp"
+                android:layout_marginTop="440dp"
+                android:text="최신순"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="15dp"/>
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="30dp"
+                android:layout_marginLeft="330dp"
+                android:layout_marginTop="440dp"
+                android:text="댓글순"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="15dp"/>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/story1"
+                android:layout_width="370dp"
+                android:layout_height="180dp"
+                android:layout_marginTop="480dp"
+                android:layout_centerHorizontal="true"
+                android:backgroundTint="@color/white"
+                app:cardCornerRadius="10dp">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/example1"/>
+            </androidx.cardview.widget.CardView>
+
+        </RelativeLayout>
 </FrameLayout>
